Fixed the UI bug where the Menu Card Images were Overlapping the Header, wherein idwally they should be behind the Header while Scrolling. Fixed it with z-index property. In next Section we will look at creating the Accordian in the Menu Page, Add a Login Button & finally use Redux Toolkit to manage our Store.

--- a/Assignment 7/styles.css
+++ b/Assignment 7/styles.css
@@ -14,6 +14,7 @@
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 1000;
 }
 
 .header li {
